--- a/home-discord.html
+++ b/home-discord.html
@@ -137,7 +137,7 @@
             </div>
             
             <div class="nav-item">
-                <a href="discord.html">
+                <a href="index.html">
                     <img src="assets/prof.png" alt="You" class="profile-icon" />
                     <p>You</p>
                 </a>
