--- a/message.html
+++ b/message.html
@@ -12,7 +12,7 @@
 
     <!-- Header -->
     <div class="header">
-      <span class="back-button"><a href="home-discord.html">←</a></span>
+      <span class="back-button"><a href="index.html">←</a></span>
       <img src="assets/prof2.png" alt="Avatar" class="avatar">
       <div class="user-info">
         <strong>JoNathan</strong>
